Added additional companies along with main and job links (where available).

--- a/index.html
+++ b/index.html
@@ -13,14 +13,40 @@ event-map:              '<iframe width="100%" height="350" frameborder="0" scrol
 companies:
     -
         name:   'StudioNow'
-        thumb:  '/img/studionow.png'
+        thumb:  '/img/studionow.jpg'
         main:   'http://www.studionow.com'
-        jobs:   'http://www.studionow.com'
+        jobs:   'http://www.studionow.com/about/jobs/'
     -
-        name:   'StudioNow'
-        thumb:  '/img/studionow.png'
-        main:   'http://www.studionow.com'
-        jobs:   'http://www.studionow.com'
+        name:   'Digital Reasoning'
+        thumb:  '/img/digitalreasoning.jpg'
+        main:   'http://www.digitalreasoning.com'
+        jobs:   'http://www.digitalreasoning.com/careers/'
+    -
+        name:   'Stratasan'
+        thumb:  '/img/stratasan.jpg'
+        main:   'http://www.stratasan.com'
+    -
+        name:   'MyEmma'
+        thumb:  '/img/myemma.jpg'
+        main:   'http://www.myemma.com'
+        jobs:   'http://www.myemma.com/meet-us/jobs'
+    -
+        name:   'GitHub'
+        thumb:  '/img/github.jpg'
+        main:   'http://www.github.com'
+        jobs:   'http://jobs.github.com'
+    -
+        name:   'Eldarion'
+        thumb:  '/img/eldarion.jpg'
+        main:   'http://www.eldarion.com'
+    -
+        name:   'ArtistGrowth'
+        thumb:  '/img/artistgrowth.jpg'
+        main:   'https://artistgrowth.com/'
+    -
+        name:   'Sucratrend'
+        thumb:  '/img/sucratrend.jpg'
+        main:   'https://sucratrend.com/'
 
 people:
     -
